src/objects/CM_Network__c.object
<CustomObject>
    <fields>
        <fullName>CM_Corporate_Entity_Code__c</fullName>
        <label>Corporate Entity Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Directory_Exclusion_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Directory Exclusion Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Network_Effective_Date__c</fullName>
        <label>Network Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_Network_End_Date__c</fullName>
        <label>Network End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_Network_Status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Network__c</fullName>
        <label>Network</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Panel__c</fullName>
        <description>PPN-18880</description>
        <label>Panel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A – Accepting</fullName>
                </value>
                <value>
                    <fullName>C – Closed</fullName>
                </value>
                <value>
                    <fullName>E – Existing Patients only</fullName>
                </value>
                <value>
                    <fullName>F – Existing &amp; Family only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CM_Provider_Network_Designation__c</fullName>
        <label>Provider Network Designation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Role__c</fullName>
        <description>PPN-18880</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PCP – Primary Care Physician</fullName>
                </value>
                <value>
                    <fullName>PSP – Primary Specialist Physician</fullName>
                </value>
                <value>
                    <fullName>Both PCP/PSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CM_Service_Payee_Location_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service &amp; Payee Location Address</label>
        <referenceTo>CM_SPL_Addr__c</referenceTo>
        <relationshipLabel>Networks</relationshipLabel>
        <relationshipName>Networks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Key__c</fullName>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Network</label>
    <nameField>
        <displayFormat>NI-{0}</displayFormat>
        <label>Network Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Networks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>